# Multi-Technology-Solar-Cell

./: BENCHMARK_REPORT.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  VALIDATION_MULTI_TECH.md  VALIDATION_REPORT.md  app.py  build_paper.js  pyproject.toml
ai/: conditional_pinn.py  conditional_pinn_torch.py  ml_models.py  multi_tech_optimizer.py  optimizer.py  pinn_inverse.py  uncertainty.py
artifacts/: benchmark_results.json  conditional_pinn.pt  conditional_pinn_history.pkl  conditional_pinn_metrics.json  opt_benchmark_A.json  opt_benchmark_B.json  validation_cross_tool.json  validation_multi_tech.json  validation_v2_1.json  validation_v3_0.json
data/: experimental_devices.csv  materials_database.json  multi_technology_database.json
docs/: API.md  CROSS_TOOL_VALIDATION.md  Deep_Literature_Review_Solar_Cells.docx  INTEROPERABILITY.md  Solar_Cell_Data_Book.xlsx  TUTORIAL.md  USER_GUIDE.md
examples/: example_cdte.def
pages/: 1_Advanced_Physics.py  2_Validation_and_Benchmarks.py  3_Silicon_Technology.py  4_Organic_Technology.py  5_Tandem_Designer.py  6_Inverse_Design.py  7_Datasets_and_Interop.py  8_References_Library.py
physics/: cdte.py  dd_ion.py  dd_solver.py  device.py  energy_yield.py  layer_library.py  materials_loader.py  optical_generation.py  organic.py  provenance_audit.py  silicon.py  tandem.py  tmm.py  tmm_custom.py
scripts/: run_benchmark.py  run_cross_tool_validation.py  run_multi_tech_validation.py  run_tutorial_examples.py  run_validation.py  train_conditional_pinn.py
tests/: test_advanced_physics.py  test_ai_uncertainty.py  (+11 more)
(+21 files in other folders)
