[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-cell-design-tool"
version = "1.1.0"
description = "Open, validated, multi-technology solar-cell design & optimization: perovskite, silicon, organic, tandem — every number certified-device-validated and DOI-cited."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Solar Cell Design Tool contributors"}]
keywords = ["photovoltaics", "solar-cells", "drift-diffusion", "perovskite", "tandem", "SCAPS", "simulation"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy>=1.26", "scipy>=1.11", "pandas>=2.0",
  "streamlit>=1.30", "plotly>=5.18", "scikit-learn>=1.3",
]

[project.optional-dependencies]
ai = ["torch>=2.1"]
dev = ["pytest>=7.4"]

[tool.setuptools]
packages = ["physics", "utils", "ai"]

[project.urls]
Documentation = "docs/API.md"
